--- a/latex/results.tex
+++ b/latex/results.tex
@@ -1,4 +1,8 @@
 \section{Validity of the model}
-The results of the testing done in the Analysis-chapter, particularly the convergence tests based on varying the conversion-factor, Hc, to exceed the expected numerical error arising from the scheme itself based on equation \ref{}, suggest that the implementation of our model is correct. 
-The mathematics overlap, as we have seen in chapter \ref{}, and if we introduce enough walkers there seems to be no difference between adding an area on the mesh where random walks solve the equation, and not doing so. 
+As we saw in the introduction to the analysis chapter it is possible to introduce enough walkers so that there is no mathematical difference between the combined model and the PDE-model. 
+For all practical purposes, however we will not use that many walkers, because it is not the reason we introduced them in the first place. 
+The simulations done in the analysis-chapter are largely done for verification purposes (see chapter \ref{debugging} in the appendix).
 In other words, our model converges to the continuum model in the limit of sufficient walkers.
+
+% The results of the testing done in the Analysis-chapter, particularly the convergence tests based on varying the conversion-factor, Hc, to exceed the expected numerical error arising from the scheme itself based on equation \ref{}, suggest that the implementation of our model is correct. 
+% The mathematics overlap, as we have seen in chapter \ref{}, and if we introduce enough walkers there seems to be no difference between adding an area on the mesh where random walks solve the equation, and not doing so. 
